<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ContentFragment">

    <EditText
        android:id="@+id/deviceName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/device_name"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/accessKey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/access_key"
        android:maxLines="1"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deviceName" />
    <EditText
        android:id="@+id/secretKey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/secret_key"
        android:maxLines="1"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accessKey" />
    <EditText
        android:id="@+id/bucketName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/bucket_name"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secretKey" />
    <TextView
        android:id="@+id/running"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/running"
        app:layout_constraintBottom_toTopOf="@id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bucketName" />

    <ToggleButton
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/running" />
</androidx.constraintlayout.widget.ConstraintLayout>